--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="body">
 			<header class="flex-container">
 				<img id="logo" src="/images/Vivat.png" alt="ThirstQuencher" height="180">
-                <marquee class="marquee" direction="" style="border: rgb(57, 56, 57) 2px solid"> <h5>ThirstQuencher: A Symphony of Spirits, Pouring Pleasure into Every Glass </h5> </marquee>  
+                <marquee class="marquee" direction="" > <h5>ThirstQuencher: A Symphony of Spirits, Pouring Pleasure into Every Glass </h5> </marquee>  
 				<div class="searchBar">
 					<input type="text" name="" value="" placeholder="Cocktail Search">
 					<button type="button" name="button">Get Cocktail</button>
